--- a/V1_6_mass_geodesic.ipynb
+++ b/V1_6_mass_geodesic.ipynb
@@ -4316,9 +4316,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Photon Integrator)",
+   "display_name": "Python (Jupyter notebook)",
    "language": "python",
-   "name": "photon-integrator-venv"
+   "name": "docs-project-venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4330,7 +4330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
